--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,7 @@
     },
     "exclude": ["node_modules", "dist"],
     "include": ["src"],
-    "references": [{ "path": "./tsconfig.node.json" }]
+    "references": [
+        { "path": "./tsconfig.node.json" }
+    ]
 }
